RESOLVED FIXED202056
Fix WPT test html/browsers/offline/application-cache-api/api_swapcache_error.https.html
https://bugs.webkit.org/show_bug.cgi?id=202056
Summary Fix WPT test html/browsers/offline/application-cache-api/api_swapcache_error....
Alex Christensen
Reported 2019-09-20 14:05:28 PDT
null-check document in ApplicationCacheGroup::postListenerTask
Attachments
Patch (1.55 KB, patch)
2019-09-20 14:06 PDT, Alex Christensen
no flags
Patch (11.84 KB, patch)
2019-09-20 22:41 PDT, Alex Christensen
no flags
Patch (12.12 KB, patch)
2019-09-20 22:52 PDT, Alex Christensen
no flags
Patch (12.26 KB, patch)
2019-09-21 00:31 PDT, Alex Christensen
no flags
Alex Christensen
Comment 1 2019-09-20 14:06:22 PDT
Alex Christensen
Comment 2 2019-09-20 14:06:44 PDT
Alexey Proskuryakov
Comment 3 2019-09-20 16:53:57 PDT
Comment on attachment 379268 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=379268&action=review > Source/WebCore/ChangeLog:3 > + null-check document in ApplicationCacheGroup::postListenerTask Is this related to rdar://problem/55523986? A null check probably wouldn't be the right fix if it is.
Alex Christensen
Comment 4 2019-09-20 22:41:22 PDT
Alex Christensen
Comment 5 2019-09-20 22:52:58 PDT
Alex Christensen
Comment 6 2019-09-21 00:31:33 PDT
WebKit Commit Bot
Comment 7 2019-09-23 22:25:18 PDT
Comment on attachment 379314 [details] Patch Clearing flags on attachment: 379314 Committed r250283: <https://trac.webkit.org/changeset/250283>
WebKit Commit Bot
Comment 8 2019-09-23 22:25:19 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 9 2019-09-23 22:26:17 PDT
Note You need to log in before you can comment on or make changes to this bug.