Fix WPT test html/browsers/offline/application-cache-api/api_swapcache_error.https.html https://bugs.webkit.org/show_bug.cgi?id=202056 <rdar://problem/55523986>

Patch by Alex Christensen <achristensen@webkit.org> on 2019-09-23
Reviewed by Youenn Fablet.

LayoutTests/imported/w3c:

* web-platform-tests/html/browsers/offline/application-cache-api/api_swapcache_error.https-expected.txt:

Source/WebCore:

The test makes sure we throw an exception when we are in an invalid state, which we should definitely do.

* loader/appcache/ApplicationCache.cpp:
(WebCore::ApplicationCache::setGroup):
(WebCore::ApplicationCache::setManifestResource):
* loader/appcache/ApplicationCache.h:
(WebCore::ApplicationCache::manifestResource const):
(WebCore::ApplicationCache::group const):
* loader/appcache/ApplicationCacheGroup.h:
* loader/appcache/ApplicationCacheHost.cpp:
(WebCore::ApplicationCacheHost::candidateApplicationCacheGroup const):
(WebCore::ApplicationCacheHost::failedLoadingMainResource):
(WebCore::ApplicationCacheHost::setCandidateApplicationCacheGroup):
(WebCore::ApplicationCacheHost::swapCache):
* loader/appcache/ApplicationCacheHost.h:
(WebCore::ApplicationCacheHost::candidateApplicationCacheGroup const): Deleted.
* loader/appcache/ApplicationCacheResource.h:

LayoutTests:

* TestExpectations:

Canonical link: https://commits.webkit.org/215736@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250283 268f45cc-cd09-0410-ab3c-d52691b4dbfc